--- a/ppedv.Foodybrät/ppedv.Foodybrät.Data.EfCore/ppedv.Foodybrät.Data.EfCore.csproj
+++ b/ppedv.Foodybrät/ppedv.Foodybrät.Data.EfCore/ppedv.Foodybrät.Data.EfCore.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ppedv.Foodybrät.Contracts\ppedv.Foodybrät.Contracts.csproj" />
     <ProjectReference Include="..\ppedv.Foodybrät.Model\ppedv.Foodybrät.Model.csproj" />
   </ItemGroup>
 
