IoC mit allem und AutoFac

--- a/ppedv.Foodybrät/ppedv.Foodybrät.Logic/ppedv.Foodybrät.Logic.csproj
+++ b/ppedv.Foodybrät/ppedv.Foodybrät.Logic/ppedv.Foodybrät.Logic.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ppedv.Foodybrät.Data.EfCore\ppedv.Foodybrät.Data.EfCore.csproj" />
+    <ProjectReference Include="..\ppedv.Foodybrät.Contracts\ppedv.Foodybrät.Contracts.csproj" />
     <ProjectReference Include="..\ppedv.Foodybrät.Model\ppedv.Foodybrät.Model.csproj" />
   </ItemGroup>
 
