--- a/ppedv.Foodybrät/ppedv.Foodybrät.UI.TestConsole/ppedv.Foodybrät.UI.TestConsole.csproj
+++ b/ppedv.Foodybrät/ppedv.Foodybrät.UI.TestConsole/ppedv.Foodybrät.UI.TestConsole.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ppedv.Foodybrät.Contracts\ppedv.Foodybrät.Contracts.csproj" />
+    <ProjectReference Include="..\ppedv.Foodybrät.Data.EfCore\ppedv.Foodybrät.Data.EfCore.csproj" />
     <ProjectReference Include="..\ppedv.Foodybrät.Logic\ppedv.Foodybrät.Logic.csproj" />
     <ProjectReference Include="..\ppedv.Foodybrät.Model\ppedv.Foodybrät.Model.csproj" />
   </ItemGroup>
